fix/open close design and generate bio in update, also add metadata

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/liveyst.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>liveyst</title>
+    <meta
+      name="description"
+      content="Go live with Liveyst and keep your customers updated in real time! Instantly share your business status, engage with customers, and boost your online presence effortlessly."
+    />
+    <title>Go Live Your Business with Liveyst</title>
+    <meta name="keywords" content="liveyst, business, services, current opening status, easy feedback, easy access" />
   </head>
   <body>
     <div id="root"></div>
